force-app/main/default/objects/RoletaCargos__mdt/RoletaCargos__mdt.object-meta.xml
<CustomObject>
    <label>Roleta Cargo</label>
    <pluralLabel>Roleta Cargos</pluralLabel>
</CustomObject>