force-app/main/default/objects/RoletaCargos__mdt/fields/Cargos__c.field-meta.xml
<CustomField>
    <fullName>Cargos__c</fullName>
    <label>Cargos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>