force-app/main/default/objects/RoletaCargos__mdt/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>