force-app/main/default/objects/RoletaCargos__mdt/fields/UsuarioPadrao__c.field-meta.xml
<CustomField>
    <fullName>UsuarioPadrao__c</fullName>
    <label>Usuário Padrão</label>
    <length>255</length>
    <type>Text</type>
</CustomField>